sass/header.scss
// header background
#header {

	height: 158px;
	background: url("../images/header-illidan-still.jpg");
	background-position: center -157px;

	.redditname a {
		@include sprite($logo-resized-fw);
		display: block;
		margin: 0 auto;
		font-size: 0px;
		color: #364657;
		left: 108px;
		position: absolute;
		top: 35px;
		z-index: 100;

		&:hover {
			@include sprite($logo-resized-glow-fw);
		}
	}

	&:after {
		content: '';
		background: url(../images/header-divide.fw.png) repeat-x;
		height: 23px;
		position: absolute;
		left: 0;
		right: 0;
		top: 142px;
	}

}

.tabmenu {
	position: relative;
	//top: -1px;
	left: 220px;

	//background: rgba(0, 0, 0, 0.5);

	li.selected a {
		text-shadow: 0 0 10px #e6ff42, 0 0 10px #e6ff42;
		color: $green_title;
		background: rgb(0, 0, 0);
		background: rgba(0, 0, 0, 0.5);
		border: none;
		z-index: 100;
	}
	li a {
		color: #fff;
		background: rgb(0, 0, 0);
		background: rgba(0, 0, 0, 0.5);
	}
}

// reddit/ snoo logo
#header-img-a {
	margin-top: 2px;
	margin-left: 30px;
	height: 112px;
	width: 70px;
	display: inline-block;

	@include sprite($snoo);
	&:hover{
		@include sprite($snoo-glow-fw);
	}

	#header-img{
		opacity: 0;
	}

}

// Edit in the subreddit menu list
#sr-more-link {
	display: none;
}

// header subreddit list
#sr-header-area,
	// bottom right user panel
#header-bottom-right {
	background: rgb(0, 0, 0);
	background: rgba(0, 0, 0, 0.5);
	padding: 5px 0px 5px 5px;
	color: #EEEEEE;
	white-space: nowrap;
	border-bottom: 1px solid #1d1d1d;
	a {
		color: #eee;
	}
	border-top-left-radius: 0;

	right: 10px;
	bottom: 6px;

	// allow res to override the position
	&.res-navTop{
		bottom: auto;
	}
}

.user, .separator {
	color: #EEEEEE;
}

// header subreddit list items
.sr-bar a {
	color: #eee
}

.dropdown.srdrop .selected {
	color: #fff;
}

